<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/preference_behavior">
		<ListPreference android:key="precision" android:title="@string/precision_title"
			android:summary="@string/precision_summary" android:entries="@array/precision_choices"
			android:entryValues="@array/precision_values" android:defaultValue="1" />

		<CheckBoxPreference android:key="use_wifi"
			android:title="@string/wifi_title" android:summary="@string/wifi_summary"
			android:defaultValue="true" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/preference_latitude">
	<EditTextPreference android:summary="@string/latitude_summary" android:title="@string/latitude_title" android:key="latitude"></EditTextPreference>
</PreferenceCategory>
</PreferenceScreen>
